[workspace]
resolver = "2"
members = [
    "native-pkcs11",
    "native-pkcs11-core",
    "native-pkcs11-traits",
    "native-pkcs11-keychain",
    "pkcs11-sys",
    "native-pkcs11-windows",
]

[workspace.package]
authors = [
    "Brandon Weeks <bweeks@google.com>",
    "Kevin King <kcking@google.com>",
]
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/google/native-pkcs11"
license = "Apache-2.0"

[profile.release]
strip = "symbols"
panic = "abort"
