[package]
name = "native-pkcs11-core"
version = "0.2.8"
description = "Shared cross-platform PKCS#11 module logic for native-pkcs11."
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
native-pkcs11-traits = { version = "0.2.0", path = "../native-pkcs11-traits" }
once_cell = "1.17.1"
p256 = { version = "0.13.0", default-features = false, features = [
    "arithmetic",
    "pkcs8",
    "std",
] }
pkcs1 = { version = "0.7.1", default-features = false }
pkcs11-sys = { version = "0.2.0", path = "../pkcs11-sys" }
strum = "0.24.1"
strum_macros = "0.24.3"
thiserror = "1.0.40"
tracing = "0.1.37"

[dev-dependencies]
serial_test = { version = "2.0.0", default-features = false }

[target.'cfg(target_os="macos")'.dependencies]
native-pkcs11-keychain = { version = "0.2.0", path = "../native-pkcs11-keychain" }

[target.'cfg(target_os="windows")'.dependencies]
native-pkcs11-windows = { version = "0.2.0", path = "../native-pkcs11-windows" }
