[package]
name = "native-pkcs11-keychain"
version = "0.2.23"
description = "native-pkcs11 backend for macos keychain."
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
native-pkcs11-traits = { version = "0.2.0", path = "../native-pkcs11-traits" }
p256 = { version = "0.13.2", default-features = false, features = [
    "arithmetic",
    "pkcs8",
    "std",
] }
rand = "0.8.5"
rsa = { version = "0.9.7", default-features = false, features = ["std"] }
thiserror = "2"
tracing = "0.1.41"
tracing-error = { version = "0.2.1", default-features = false }
x509-cert = { version = "0.2.5", default-features = false }

[dev-dependencies]
serial_test = { version = "3.2.0", default-features = false }

[target.'cfg(target_os="macos")'.dependencies]
core-foundation = { version = "0.10.0", features = ["mac_os_10_8_features"] }
security-framework = { version = "3.0.1", features = ["OSX_10_15"] }
security-framework-sys = { version = "2.12.1", features = ["OSX_10_15"] }
