[package]
name = "native-pkcs11-traits"
version = "0.2.25"
description = "Traits for implementing and interactive with native-pkcs11 module backends."
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
rand = "0.9.0"
x509-cert = { version = "0.2.5", default-features = false }
