[package]
name = "native-pkcs11-windows"
version = "0.2.0"
description = "[wip] native-pkcs11 backend for windows."
authors = [
    "Brandon Weeks <bweeks@google.com>",
    "Kevin King <kcking@google.com>",
]
edition = "2021"
rust-version = "1.63"
repository = "https://github.com/google/native-pkcs11"
license = "Apache-2.0"

[dependencies]
native-pkcs11-traits = { path = "../native-pkcs11-traits" }

[target.'cfg(target_os="windows")'.dependencies.windows]
version = "0.44.0"
features = [
    "Foundation",
    "Foundation_Collections",
    "Security_Cryptography_Certificates",
    "Security_Cryptography_Core",
    "Storage_Streams",
    "Win32_System_WinRT",
]
