[package]
name = "native-pkcs11-windows"
version = "0.2.17"
description = "[wip] native-pkcs11 backend for windows."
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
native-pkcs11-traits = { version = "0.2.0", path = "../native-pkcs11-traits" }

[target.'cfg(target_os="windows")'.dependencies.windows]
version = "0.56.0"
features = [
    "Foundation",
    "Foundation_Collections",
    "Security_Cryptography_Certificates",
    "Security_Cryptography_Core",
    "Storage_Streams",
    "Win32_System_WinRT",
]
