[package]
name = "native-pkcs11"
version = "0.2.2"
description = "Cross-platform PKCS#11 module written in rust. Can be extended with custom credential backends."
authors = [
    "Brandon Weeks <bweeks@google.com>",
    "Kevin King <kcking@google.com>",
]
edition = "2021"
rust-version = "1.63"
repository = "https://github.com/google/native-pkcs11"
license = "Apache-2.0"

[features]
custom-function-list = []

[dependencies]
native-pkcs11-core = { version = "0.2.0", path = "../native-pkcs11-core" }
native-pkcs11-traits = { version = "0.2.0", path = "../native-pkcs11-traits" }
once_cell = "1.17.0"
pkcs11-sys = { version = "0.2.0", path = "../pkcs11-sys" }
thiserror = "1.0.38"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = "0.3.16"

[lib]
crate-type = ["cdylib", "lib"]

[dev-dependencies]
serial_test = { version = "1.0.0", default-features = false }
tracing = { version = "0.1.37", default-features = false }
tracing-subscriber = { version = "0.3.16", default-features = false, features = [
    "env-filter",
] }

[target.'cfg(target_os="macos")'.dependencies]
native-pkcs11-keychain = { version = "0.2.0", path = "../native-pkcs11-keychain" }

[target.'cfg(target_os="windows")'.dependencies]
native-pkcs11-windows = { version = "0.2.0", path = "../native-pkcs11-windows" }
