[package]
name = "native-pkcs11"
version = "0.2.17"
description = "Cross-platform PKCS#11 module written in rust. Can be extended with custom credential backends."
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[features]
custom-function-list = ["pkcs11-sys/custom-function-list"]

[dependencies]
native-pkcs11-core = { version = "^0.2.14", path = "../native-pkcs11-core" }
native-pkcs11-traits = { version = "0.2.0", path = "../native-pkcs11-traits" }
once_cell = "1.19.0"
pkcs11-sys = { version = "0.2.0", path = "../pkcs11-sys" }
thiserror = "1.0.57"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-journald = "0.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
log = "0.4.21"

[lib]
crate-type = ["lib", "cdylib"]

[dev-dependencies]
serial_test = { version = "3.0.0", default-features = false }
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
    "env-filter",
] }

[target.'cfg(target_os="macos")'.dependencies]
native-pkcs11-keychain = { version = "0.2.0", path = "../native-pkcs11-keychain" }

[target.'cfg(target_os="windows")'.dependencies]
native-pkcs11-windows = { version = "0.2.0", path = "../native-pkcs11-windows" }
