[package]
name = "native-pkcs11"
version = "0.2.27"
description = "Cross-platform PKCS#11 module written in rust. Can be extended with custom credential backends."
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[features]
custom-function-list = []

[dependencies]
cached = { version = "~0.55", default-features = false }
native-pkcs11-core = { version = "^0.2.26", path = "../native-pkcs11-core" }
native-pkcs11-traits = { version = "0.2.25", path = "../native-pkcs11-traits" }
pkcs11-sys = { version = "0.2.25", path = "../pkcs11-sys" }
thiserror = "2"
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-journald = "0.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[lib]
crate-type = ["lib", "cdylib"]

[dev-dependencies]
serial_test = { version = "3.2.0", default-features = false }
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3.19", default-features = false, features = [
    "env-filter",
] }

[target.'cfg(target_os="macos")'.dependencies]
native-pkcs11-keychain = { version = "0.2.26", path = "../native-pkcs11-keychain" }

[target.'cfg(target_os="windows")'.dependencies]
native-pkcs11-windows = { version = "0.2.26", path = "../native-pkcs11-windows" }
