[package]
name = "pkcs11-sys"
version = "0.2.25"
description = "Generated bindings for pkcs11.h. Useful for building PKCS#11 modules in rust."
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[build-dependencies]
bindgen = { version = "0.72.0", optional = true }
